--- a/views/contact-success.ejs
+++ b/views/contact-success.ejs
@@ -14,15 +14,7 @@
 
     <h1>Contact !!</h1>
     <p>you won't find a website better anywhere esle!</p>
-    <form id="contact-form" action="./contact" method="post">
-      <label for="who">who do you want to contact ?</label>
-      <input type="text" name="who">
-      <label for="department">which department ?</label>
-      <input type="text" name="department" >
-      <label for="email">your email</label>
-      <input type="email" name="email">
-      <input type="submit" value="submit">
-    </form>
+    <p>who <%= data.who%> , department <%= data.department %> and email <%= data.email %></p>
   </body>
 </html>
 <!--  -->
